fixed the width of the search-bar-container so that no whitespace between the parent it its children are displayed

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -5,14 +5,14 @@ body {
 .App {
     margin: auto;
     overflow: auto;
+    width: 100vw;
     font-family: "Gothic A1";
 }
 
 .search-bar-wrap {
     margin: auto;
     margin-top: 3rem;
-    font-size: 120%;
-    width: 70%;
+    width: 72%;
     border: solid 7px #ECEFF1;
     border-radius: 4px;
     display: flex;
@@ -35,10 +35,35 @@ body {
 
 }
 
+.head {
+    flex: 0 1 50%;
+    display: flex;
+    flex-direction: row;
+    align-content: space-between;
+    padding: 5px;
+    height: 20px;
+}
+
+.sub {
+    display: flex;
+    background-color: #ECEFF1;
+    border: none;
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.advanced-option {
+    border: none;
+    background-color: #CFD8DC;
+    margin: 0 4px 0px 0px;
+    padding: 8px;
+    width: fit-content;
+    text-align: middle;
+}
+
 #advanced-option-button,
 #lang-option-button {
     width: max-content;
-    font-size: 80%;
     padding: 0px 11px 0px 0px;
     margin-right: 9px;
     border-right: 1px solid #ECEFF1;
@@ -52,43 +77,18 @@ body {
     cursor: pointer;
 }
 
-.head {
-    display: flex;
-    flex-direction: row;
-    padding: 5px;
-    height: 20px;
-}
-
-.sub {
-    background-color: #ECEFF1;
-    border: none;
-}
-
-.advanced-option {
-    font-size: 80%;
-    border: none;
-    background-color: #CFD8DC;
-    margin: 0 4px 0px 0px;
-    padding: 8px;
-    width: fit-content;
-    text-align: middle;
-}
-
 .advanced-option:hover {
     background-color: #B0BEC5;
     cursor: pointer;
 }
 
 .form {
-    display: flex;
-    flex-direction: row;
-    margin: 0;
-    padding: 0;
+    flex-grow: 100;
 }
 
-.search-bar {
-    width: 21rem;
-    font-size: 95%;
+input.search-bar {
+    font-size: 100%;
+    width: 100%;
     margin: none;
     border: none;
 }
@@ -119,13 +119,9 @@ body {
     transition: ease 0.3s;
 }
 
-.lang-select.active {
+ul.lang-select.active {
     margin-top: 5px;
     transition: ease 0.3s;
-    height: 1.8rem;
-}
-
-ul.lang-select.active {
     height: 1.8rem;
 }
 
@@ -148,21 +144,45 @@ ul.lang-select.active {
 }
 
 .pages {
+    height: fit-content;
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: baseline;
 }
 
 .page {
     font-size: 110%;
     margin: 2em 2em 4em 0;
+    padding: 23px;
     color: #2e86c1;
     text-decoration: underline;
 }
 
+.page.active {
+    font-weight: bold;
+    border: #2e86c1 3px solid;
+    border-radius: 20px;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
 .page:hover {
+    box-sizing: border-box;
     cursor: pointer;
+    font-weight: bold;
+    border: #2e86c1 3px dotted;
+    border-radius: 20px;
+    padding: 20px;
+}
+
+.page.active:hover {
+    font-weight: bold;
+    border: #2e86c1 3px solid;
+    border-radius: 20px;
+    padding: 20px;
+    box-sizing: border-box;
 }
 
 .result-notice {
